@@ -1,5 +1,10 @@
 2015-08-20  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
 
+	* reorg.c (relax_delay_slots): Don't use #if to check value of
+	HAVE_cc0.
+
+2015-08-20  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
+
 	* genconfig.c (main): Always define HAVE_CONDITIONAL_EXECUTION.
 	* targhooks.c (default_have_conditional_execution): Adjust.
 
